Semana 05 - Integração Banco de Dados

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,4 +2,4 @@
 app.cidade.blank=O nome da cidade deve ser informado
 app.cidade.size=O nome da cidade deve ter entre 5 e 60 caracteres
 app.estado.blank=A sigla do estado deve ser informado
-app.estado.size=A sigla do estado está limitada a dois caracteres
+app.estado.size=A sigla do estado esta limitada a dois caracteres
